--- a/pepsi_can.ipynb
+++ b/pepsi_can.ipynb
@@ -44,7 +44,53 @@
     "import io\n",
     "from PIL import Image\n",
     "import ipywidgets as widgets\n",
-    "from fastai.vision.all import PILImage\n"
+    "from fastai.vision.all import PILImage\n",
+    "from IPython.display import Markdown, display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(Markdown(\"****Retail Item Detection****\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(Markdown(\"*****Note:*****\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(Markdown(\"**1) It can detect objects of classes [ milk_bottle, carton, can, water_bottle,pepsi can].**\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(Markdown(\"**2) First upload the image using 'Upload button'.**\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(Markdown(\"**3) Secondly click on the 'Detect' button to predict the object.**\"))"
    ]
   },
   {
@@ -235,14 +281,15 @@
    "source": [
     "btn_run.on_click(on_click_classify)\n",
     "#btn_image.on_change(on_upload_display)\n",
-    "title = widgets.Label(\"Retail Item Detection\")\n",
-    "note=widgets.Label(\"Note:\")\n",
-    "note1=widgets.Label(\"1) It can detect objects of classes [ milk_bottle, carton, can, water_bottle,pepsi can].\")\n",
-    "note2=widgets.Label(\"2) First upload the image using button.\")\n",
-    "note3=widgets.Label(\"3) Secondly click on the detect button to predict the object.\")\n",
+    "# title = widgets.Label(\"Retail Item Detection\")\n",
+    "# note=widgets.Label(\"Note:\")\n",
+    "# note1=widgets.Label(\"1) It can detect objects of classes [ milk_bottle, carton, can, water_bottle,pepsi can].\")\n",
+    "# note2=widgets.Label(\"2) First upload the image using button.\")\n",
+    "# note3=widgets.Label(\"3) Secondly click on the detect button to predict the object.\")\n",
     "instruction_labl = widgets.Label(\"Upload your image\")\n",
     "Run_labl = widgets.Label(\"Click on Detect for Prediction\")\n",
-    "input_widgets = widgets.VBox([title, note, note1,note2, note3, instruction_labl, btn_image,Run_labl, widgets.HBox([btn_run])])\n",
+    "#input_widgets = widgets.VBox([title, note, note1,note2, note3, instruction_labl, btn_image,Run_labl, widgets.HBox([btn_run])])\n",
+    "input_widgets = widgets.VBox([instruction_labl, btn_image,Run_labl, widgets.HBox([btn_run])])\n",
     "output_widgets = widgets.HBox([out_pl, out_img])"
    ]
   },
